--- a/package.json
+++ b/package.json
@@ -4,9 +4,17 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.12",
     "chart.js": "^4.4.0",
+    "electron-is-dev": "^2.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-router-dom": "^6.16.0",
     "sass": "^1.69.0",
     "scss": "^0.2.4"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
+    "electron": "^27.0.2",
+    "electron-builder": "^24.6.4",
+    "wait-on": "^7.0.1"
   }
 }
