--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.12",
     "chart.js": "^4.4.0",
+    "cors": "^2.8.5",
     "electron-is-dev": "^2.0.0",
+    "express": "^4.18.2",
     "react-chartjs-2": "^5.2.0",
     "react-router-dom": "^6.16.0",
     "sass": "^1.69.0",
