--- a/ani2/package.json
+++ b/ani2/package.json
@@ -7,12 +7,18 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.13",
+    "@mui/lab": "^5.0.0-alpha.54",
     "@mui/material": "^5.14.13",
     "@mui/styled-engine-sc": "^6.0.0-alpha.1",
+    "@mui/x-date-pickers": "^6.18.0",
+    "@mui/x-date-pickers-pro": "^6.18.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "gh-pages": "^6.0.0",
+    "mui-daterange-picker": "^1.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.16.0",
