--- a/ani2/package.json
+++ b/ani2/package.json
@@ -11,6 +11,7 @@
     "@mui/lab": "^5.0.0-alpha.54",
     "@mui/material": "^5.14.13",
     "@mui/styled-engine-sc": "^6.0.0-alpha.1",
+    "@mui/x-charts": "^6.19.4",
     "@mui/x-date-pickers": "^6.18.0",
     "@mui/x-date-pickers-pro": "^6.18.0",
     "@testing-library/jest-dom": "^5.14.1",
