--- a/ani2/package.json
+++ b/ani2/package.json
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "^13.2.1",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
+    "faker": "^6.6.6",
     "gh-pages": "^6.0.0",
     "mui-daterange-picker": "^1.0.5",
     "react": "^18.2.0",
