--- a/ani2/package.json
+++ b/ani2/package.json
@@ -4,9 +4,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/core": "^3.0.0",
+    "@date-io/date-fns": "^2.0.0",
+    "@date-io/moment": "^1.0.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/pickers": "^3.3.11",
     "@mui/icons-material": "^5.14.13",
     "@mui/lab": "^5.0.0-alpha.54",
     "@mui/material": "^5.14.13",
@@ -17,10 +21,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "date-fns": "^2.30.0",
+    "date-fns": "^2.0.0",
     "dayjs": "^1.11.10",
     "faker": "^6.6.6",
     "gh-pages": "^6.0.0",
+    "moment": "^2.0.0",
     "mui-daterange-picker": "^1.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
